[package]
name = "rblink"
version = "0.1.0"
authors = ["Jason Harris <sirmanlypowers@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
panic-halt = "0.2.0"

[dependencies.stm32f4]
version = "0.6.0"
features = ["stm32f407", "rt"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
opt-level = 's' # optimize for size ('z' would optimize even more)
lto = true # link with link time optimization (lto).
debug = true # enable debugging in release mode.
